# ptpv2-les

./: README
data-processing/: calculate.py  postprocess.py
evaluation/: les-eval.py  les-lacc.py  postprocess-lacc.py
les-0.2/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  b64.c  b64.h  conffile.c  conffile.h  config.h  config.h.in  config.status  configure  configure.in  funceval.lex.c  funceval.lex.l  funceval.tab.c  funceval.tab.h  funceval.tab.y  lec.c  les.c  les.conf.example  les.h  protocol.c  protocol.h  ptpdevice.c  ptpdevice.h  window.c  window.h
les-0.2/.deps/: b64.Po  conffile.Po  funceval.lex.Po  funceval.tab.Po  lec.Po  les.Po  netfunc.Po  protocol.Po  ptpdevice.Po  window.Po
les-www/: README  index.php  les.class.php
monitor/: delay-monitor.sh  load-monitor.sh
myperf-0.1/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  modes.c  modes.h  myperf.c  myperf.h  netfunc.c  netfunc.h  protocol.c  protocol.h  stats.c  stats.h
myperf-0.1/.deps/: modes.Po  myperf.Po  protocol.Po  stats.Po
serialemu/: README  securesync.py
