BUILT_SOURCES  = funceval.tab.h
AM_YFLAGS = -d
bin_PROGRAMS = les lec
les_SOURCES = les.c window.c netfunc.c protocol.c b64.c ptpdevice.c conffile.c funceval.lex.l funceval.tab.y
lec_SOURCES = lec.c netfunc.c protocol.c b64.c
include_HEADERS = les.h window.h netfunc.h protocol.h b64.h ptpdevice.h conffile.h
EXTRA_DIST = les.conf.example
