#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([les], [0.2], [pantelis.frangoudis@inria.fr])
AC_CONFIG_SRCDIR([les.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE()
AM_PROG_LEX 
# Checks for programs.
AC_PROG_CC
AC_PROG_YACC
#AM_PROG_CC_C_O

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [cos])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [pthread_create])
AC_CHECK_LIB([fl], [yywrap])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h syslog.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_STRTOD
AC_CHECK_FUNCS([memset select socket strcasecmp strncasecmp strstr strtol])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
